<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>nl.tno.essim</groupId>
	<artifactId>parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<packaging>pom</packaging>
	<name>ESSIM parent POM</name>
	<inceptionYear>2020</inceptionYear>

	<modules>
		<module>commons</module>
		<module>model-extensions</module>
		<module>essim-engine</module>
	</modules>

	<organization>
		<name>TNO</name>
		<url>https://tno.nl</url>
	</organization>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<project.version>0.0.1-SNAPSHOT</project.version>
		<emf.version>2.16.0</emf.version>
		<emfecore.version>2.18.0</emfecore.version>
		<esdl.version>2.21.1</esdl.version>
	</properties>
	
	<repositories>
		<repository>
			<id>hesi-snapshots</id>
			<name>HESI snapshot artifactory</name>
			<url>http://ci.hesi.energy:8081/artifactory/libs-snapshot-local</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		<repository>
			<id>hesi-releases</id>
			<name>HESI release artifactory</name>
			<url>http://ci.hesi.energy:8081/artifactory/libs-release-local</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<distributionManagement>
		<snapshotRepository>
			<id>hesi</id>
			<name>HESI snapshot artifactory</name>
			<url>http://ci.hesi.energy:8081/artifactory/libs-snapshot-local</url>
		</snapshotRepository>
	</distributionManagement>
	

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.8</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.2.3</version>
			</dependency>
			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20180813</version>
			</dependency>
			<dependency>
				<groupId>nl.tno.esdl</groupId>
				<artifactId>esdl</artifactId>
				<version>${esdl.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.common</artifactId>
				<version>${emf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.ecore</artifactId>
				<version>${emfecore.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>nl.tno.esdl</groupId>
			<artifactId>esdl</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.common</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.ecore</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
